adição de footer, logo, e correções

--- a/index.html
+++ b/index.html
@@ -12,26 +12,26 @@
 </head>
 <body>
     <header>
-        <!--logo aqui-->
+        <img src="./bk.jpg" alt="logo letra b e k">
     </header>
     <main>
 
         <section>
-            <textarea class="textoinicial" cols="60" rows="8" placeholder="Digite seu texto"></textarea>
+            <textarea class="textoinicial" cols="40" rows="10" placeholder="Digite seu texto"></textarea>
             <h6 class="aviso"><ion-icon name="alert-circle-outline"></ion-icon> Apenas letras minúsculas e sem acento</h6>
-            <div class="btn">
+            <div id="btn">
                 <button class="criptografar">Criptografar</button>
                 <button class="descriptografar">Descriptografar</button>
             </div>
         </section>
 
         <section class="boxfinal">
-            <textarea class="textofinal" cols="20" rows="9"></textarea>
+            <textarea class="textofinal" cols="18" rows="10"></textarea>
             <p class="semtexto"></p>
             <button class="copiar">Copiar</button>
         </section>
-
     </main>
+    <footer>Todos os direitos reservados a &copy; Bruna Keyt</footer>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
